--- a/Stocks/Stocks.UWP/Stocks.UWP.csproj
+++ b/Stocks/Stocks.UWP/Stocks.UWP.csproj
@@ -103,6 +103,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="amd_logo.png" />
     <Content Include="apple_logo.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
@@ -132,8 +133,15 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="chart.png" />
+    <Content Include="facebook_logo.png" />
+    <Content Include="google_logo.png" />
+    <Content Include="hp_logo.png" />
+    <Content Include="ibm_logo.png" />
     <Content Include="intel_logo.png" />
+    <Content Include="microsoft_logo.png" />
+    <Content Include="oracle_logo.gif" />
     <Content Include="Properties\Default.rd.xml" />
+    <Content Include="twitter_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
