Added button to select companies

--- a/Stocks/Stocks/Stocks.csproj
+++ b/Stocks/Stocks/Stocks.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ListCompanies.xaml">
+    <EmbeddedResource Update="Views\ListCompanies.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
