--- a/Stocks/Stocks.UWP/Stocks.UWP.csproj
+++ b/Stocks/Stocks.UWP/Stocks.UWP.csproj
@@ -154,6 +154,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.68.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
   </ItemGroup>
