--- a/Stocks/Stocks.UWP/Stocks.UWP.csproj
+++ b/Stocks/Stocks.UWP/Stocks.UWP.csproj
@@ -134,6 +134,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="chart.png" />
+    <Content Include="click.png" />
     <Content Include="facebook_logo.png" />
     <Content Include="google_logo.png" />
     <Content Include="hp_logo.png" />
